--- a/index.html
+++ b/index.html
@@ -5,12 +5,26 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1,maximum-scale=5"/>
-    <title>Devchallenges</title>
+      
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@200&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="style.css">
+      <title>Devchallenges</title>
 
   </head>
   <body>
       <nav class="container-nav">
-        <a href="" class="icon-page">This interior</a>
+        <a href="" class="icon-page">THIS INTERIOR</a>
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Collection</a></li>
@@ -22,11 +36,12 @@
       <main>
         <div class="container-text-main">
           <h1 class="title-info" >Modern Interior</h1>
-          <p class="description-text" >A full-Service residential & commercial interior design and staging company offering professional organizing & eco-services.</p>
+          <p class="description-text" >A full-Service residential & commercial interior design and staging company offering professional organizing &
+             eco-services.</p>
           <a href="#" class="read-more-text">Read more -></a>
         </div>
         <div class="container-images">
-          <img src="photo1.png" alt="image interior">
+          <img class="image-interior" src="photo1.png" alt="image interior">
           <div class="container-designer">
             <div class="container-infoDesigner">
               <img src="photo2.png" alt="photo designer" class="image-designer">
@@ -34,8 +49,9 @@
                 <h3 class="name-designer">Aliza Webber</h3>
                 <p class="specialization-designer">Interior Designer</p>
               </span>
-              <p>Designed in 2020 by Aliza Webber</p>
+             
             </div>
+            <p>Designed in 2020 by Aliza Webber</p>
           </div>
         </div>
       </main>
