--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
           <h1 class="title-info" >Modern Interior</h1>
           <p class="description-text" >A full-Service residential & commercial interior design and staging company offering professional organizing &
              eco-services.</p>
-          <a href="#" class="read-more-text">Read more -></a>
+          <a href="#" class="read-more-text">Read more <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-narrow-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+            <path d="M5 12l14 0"></path>
+            <path d="M15 16l4 -4"></path>
+            <path d="M15 8l4 4"></path>
+         </svg></a>
         </div>
         <div class="container-images">
           <img class="image-interior" src="photo1.png" alt="image interior">
@@ -51,7 +56,7 @@
               </span>
              
             </div>
-            <p>Designed in 2020 by Aliza Webber</p>
+            <p class="designed-in" >Designed in 2020 by Aliza Webber</p>
           </div>
         </div>
       </main>
